--- a/a_01/index.html
+++ b/a_01/index.html
@@ -28,8 +28,9 @@
 <h3> Steps to living a minimalist lifestyle </h3>
 
 <p>
+
 <div id="list">
-   <ol>
+  <ol>
 
   <li> <span class="bold">Visualize</span> the benefits of minimalism </li>
 
@@ -45,7 +46,7 @@
 <br>
   <li> <a href="#declutter">Declutter </a> </a>  all aspects of your life </li>
   <ul><li> Closely observe where you are repeatedly spending your time and money </li>
-   <li> Ask yourself, "Is there a way I can sidestep or eliminate these expenses/commitments altogether?"</li>
+  <li> Ask yourself, "Is there a way I can sidestep or eliminate these expenses/commitments altogether?"</li>
   <li> If it is not essential to your life then you do not need it. </li>
   </ul>
 
@@ -98,6 +99,24 @@ Elements such as color and typography are also used with an emphasis on simplici
 
   <br>
   <br>
+
+<section id="two_columns" class="clearfix">
+<aside id="left">
+<h2> Watch the MINIMALISM documentary </h2>
+  <p>Get inspired by this <a href=http://minimalismfilm.com> documentary </a> about the important things! 
+  </p> 
+  <p>
+  <iframe width="280" height="157.5" src="https://www.youtube.com/embed/0Co1Iptd4p4?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+ </p>
+</aside>
+
+<article id="right">
+ <h2>MINIMALIST ART</h2>
+  <p> Minimalism emerged in New York in the early 1960s among artists who were self-consciously renouncing recent art they thought had become stale and academic. A wave of new influences and rediscovered styles led younger artists to question conventional boundaries between various media. The new art favored the cool over the "dramatic": their sculptures were frequently fabricated from industrial materials and emphasized anonymity over the expressive excess of Abstract Expressionism. Painters and sculptors avoided overt symbolism and emotional content, but instead called attention to the materiality of the works. By the end of the 1970s, Minimalism had triumphed in America and Europe through a combination of forces including museum curators, art dealers, and publications, plus new systems of private and government patronage. And members of a new movement, Post-Minimalism, were already challenging its authority and were thus a testament to how important Minimalism itself became. 
+  <a href="http://www.theartstory.org/movement-minimalism.htm">    More >>  </a>
+  </p> 
+ </article>
+ </section>
 
 <div class="footer">
 
